@@ -139,6 +139,7 @@ usage_message="Options:
    -n, --dry-run            display commands without modifying any files
        --features           display basic configuration information and exit
        --mode=MODE          use operation mode MODE
+       --no-finish          don't update shared library cache
        --no-warnings        equivalent to '-Wnone'
        --preserve-dup-deps  don't remove duplicate dependency libraries
        --quiet, --silent    don't print informational messages
@@ -377,6 +378,7 @@ libtool_options_prep ()
     opt_mode=
     opt_preserve_dup_deps=false
     opt_quiet=false
+    opt_finishing=true
 
     nonopt=
     preserve_args=
@@ -472,6 +474,11 @@ libtool_parse_options ()
                              ;;
                         esac
                         shift
+                        ;;
+
+        --no-finish)
+                        opt_finishing=false
+                        func_append preserve_args " $_G_opt"
                         ;;
 
         --no-silent|--no-quiet)
@@ -2144,7 +2151,7 @@ func_mode_finish ()
       fi
     fi
 
-    if test -n "$finish_cmds$finish_eval" && test -n "$libdirs"; then
+    if test -n "$finish_cmds$finish_eval" && test -n "$libdirs" && $opt_finishing; then
       for libdir in $libdirs; do
 	if test -n "$finish_cmds"; then
 	  # Do each command in the finish commands.
@@ -2169,6 +2176,12 @@ func_mode_finish ()
       for libdir in $libdirs; do
 	$ECHO "   $libdir"
       done
+      if test "false" = "$opt_finishing"; then
+        echo
+        echo "NOTE: finish_cmds were not executed during testing, so you must"
+        echo "manually run ldconfig to add a given test directory, LIBDIR, to"
+        echo "the search path for generated executables."
+      fi
       echo
       echo "If you ever happen to want to link against installed libraries"
       echo "in a given directory, LIBDIR, you must either use libtool, and"
