@@ -2,6 +2,11 @@ NEWS - list of user-visible changes between releases of GNU Libtool
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+** New features:
+
+  - New libtool command line flag, --no-finish, to skip executing
+    finish_cmds that would alter the shared library cache during testing.
+
 ** Bug fixes:
 
   - Fix incorrect use of workarounds designed for Darwin versions that
